fix: drive education rendering from manifest